2016-07-31	"RAM wasn't built in a day."

		.travis.yml :
		- factored out build command into a separate script

		test/infra/travis-build-and-check.sh :
		- initial version; build command factored out from .travis.yml
		- added test of `./configure --help'

		GNUmakefile :
		- `make uninstall' should now remove host-side utilities
		- split `uninstall' rule into two sub-rules
		- marked `default', `check', etc. targets as `.PHONY'

		bin/innocent-pear-c++.cc :
		- now passes `--Xinnocent-pear=doge' to assembler pass, if
		  `-Xinnocent-pear -doge' is seen

		share/innocent-pear/calm.cc :
		- wrapper for assembler pass now accepts `--Xinnocent-pear=
		  doge', though this option currently does nothing

		lolwutconf/ :
		- bumped to da490e2042

2016-07-30	Tweaks.  (4)

		bin/innocent-pear-c++.cc :
		- now always passes `-fno-integrated-as' to target C++
		  compiler, if supported
		- now ignores any `-fintegrated-as' on input command line

		GNUmakefile :
		- now says in $(config.h.host) whether target compiler has
		  `-fno-integrated-as'
		- no longer specially passes `-fno-integrated-as' to make
		  rule when building .s files for target

2016-07-29	Improved relocation handling.

		bin/innocent-pear-doge.cc :
		- no longer errors out if input has no dynamic relocations

2016-07-28	Tweaks.  (3)

		configure ,
		GNUmakefile ,
		include/innocent-pear/dawg.h ,
		include/innocent-pear/kthxbai.h :
		- target-side C++ variadic template support is now also
		  mandatory

		lolwutconf/ :
		- bumped to 01f15b32fc

2016-07-26	Tweaks.  (2)

		configure ,
		GNUmakefile :
		- host-side C++ variadic template support is now mandatory;
		  so bin/innocent-pear-doge can always be built

		lolwutconf/ :
		- bumped to 3e5b959d52

2016-07-24	"No output has been received in the last 10m0s, this
		potentially indicates a stalled build or something wrong
		with the build itself."

		share/innocent-pear/doge-1.cc :
		- now calls rofl<...>::tcflow(, TCOOFF) on a (compile-time)